--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./favicon/android-chrome-512x512.png">
+    <link rel="shortcut icon" href="./favicon/favicon.ico">
   </head>
   <body>
     <header>
@@ -123,10 +129,16 @@
       <nav-bar>
         <a class="rsvp-button">RSVP</a>
         <a class="nav-link" href="#agenda">Agenda</a>
-        <a class="nav-link" href="#accommodation" data-translationkey="accommodation.title"
+        <a
+          class="nav-link"
+          href="#accommodation"
+          data-translationkey="accommodation.title"
           >Accommodation</a
         >
-        <a class="nav-link" href="#contacts" data-translationkey="contacts.title"
+        <a
+          class="nav-link"
+          href="#contacts"
+          data-translationkey="contacts.title"
           >Contacts</a
         >
         <a class="nav-link" href="#faq">FAQ</a>
@@ -153,7 +165,9 @@
       let texts = {};
       let personalData = {};
       const languageSwitcher = document.getElementById("language-switcher");
-      const translateElements = document.querySelectorAll("[data-translationkey]");
+      const translateElements = document.querySelectorAll(
+        "[data-translationkey]"
+      );
       const personalDataElements = document.querySelectorAll("[data-personal]");
       const navLinks = document.getElementsByClassName("nav-link");
       const overlayMenu = document.getElementById("overlay-menu");
@@ -162,19 +176,24 @@
       const rsvpContainer = document.getElementById("rsvp-container");
       const closeButton = document.querySelector("#close-button");
 
+      /**
+       * Highlight the selected language button
+       */
       function highlightButton() {
         const langButtons = document.querySelectorAll(
           "#language-switcher button"
         );
         langButtons.forEach((button) => {
-          if (button.id === `${currentLanguage}-btn`) {
-            button.classList.add("selected");
-          } else {
-            button.classList.remove("selected");
-          }
+          button.classList.toggle(
+            "selected",
+            button.id === `${currentLanguage}-btn`
+          );
         });
       }
 
+      /**
+       * Update the texts on the page based on the selected language
+       */
       function updateTexts() {
         translateElements.forEach((element) => {
           const key = element.dataset.translationkey;
@@ -185,18 +204,23 @@
         });
       }
 
+      /**
+       * Update the personal data on the page
+       */
       function updatePersonalData() {
         personalDataElements.forEach((element) => {
           const key = element.dataset.personal;
-          const value = personalData[key]
-          console.log(key)
-          console.log(value)
+          const value = personalData[key];
           if (value) {
             element.innerHTML = value;
           }
         });
       }
 
+      /**
+       * Set the language for the page
+       * @param {string} lang - The language code (e.g. 'en', 'de')
+       */
       function setLang(lang) {
         document.documentElement.lang = lang;
         currentLanguage = lang;
@@ -204,12 +228,16 @@
         updateTexts();
       }
 
+      /**
+       * Toggle the visibility of the menu and button state
+       */
       function toggleMenu() {
         overlayMenu.classList.toggle("exit");
         overlayMenu.classList.toggle("visible");
         floatingButton.classList.toggle("close");
       }
 
+      // Add click event listeners to RSVP buttons
       Array.from(rsvpButtons).forEach((rsvpButton) =>
         rsvpButton.addEventListener("click", function (event) {
           event.preventDefault();
@@ -218,11 +246,13 @@
         })
       );
 
+      // Add click event listener to close button
       closeButton.addEventListener("click", function () {
         rsvpContainer.classList.add("hidden");
         rsvpContainer.classList.remove("popover");
       });
 
+      // Hide RSVP container on click outside of it
       document.addEventListener("click", (event) => {
         if (
           event.target.id !== rsvpContainer.id &&
@@ -243,12 +273,13 @@
         currentLanguage = "de";
       }
 
+      // Add click event listeners for menu toggling
       floatingButton.addEventListener("click", toggleMenu);
-
       Array.from(navLinks).forEach((link) => {
         link.addEventListener("click", toggleMenu);
       });
 
+      // Fetch translation texts and update text elements with the data-translationKey attribute
       fetch("./texts.json")
         .then((response) => response.json())
         .then((data) => {
@@ -258,6 +289,7 @@
         })
         .catch((error) => console.error(error));
 
+      // Fetch personal data and update text elements with the data-personal attribute
       fetch("./personalData.json")
         .then((response) => response.json())
         .then((data) => {
