Improve styling of desktop hero banner

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         <div class="hero-wrapper">
           <div>
             <h1 data-translationkey="header.title"></h1>
-            <p>
+            <p class="hero-location">
               <span class="font-bold">21.10 | 22.10 2023</span><br />
               Vaughans Pub, Clare <br />
               Keoghs Pub, Galway
             </p>
-            <p class="description" data-translationkey="intro.description"></p>
-            <button type="button" class="rsvp-button">RSVP</button>
+            <div class="hero-cta">
+              <p class="description" data-translationkey="intro.description"></p>
+              <button type="button" class="rsvp-button">RSVP</button>
+            </div>
           </div>
           <div class="img-wrapper">
             <img src="./pint.png" class="pint" />
