fix a few things

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
           <div>
             <h1 data-translationkey="header.title"></h1>
             <p class="hero-location">
-              <span class="font-bold">21.10 | 22.10 2023</span><br />
-              Vaughans Pub, Clare <br />
-              Keoghs Pub, Galway
+              <span class="font-bold">21.10</span> Vaughans Pub, Clare
+              <br />
+              <span class="font-bold">22.10</span> Keoghs Pub, Galway
             </p>
             <div class="hero-cta">
               <p class="description" data-translationkey="intro.description"></p>
-              <button type="button" class="rsvp-button">RSVP</button>
+              <button type="button" class="rsvp-button" data-translationkey="intro.rsvp"></button>
             </div>
           </div>
           <div class="img-wrapper">
