Add link to bnbs

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <section id="accommodation">
         <h2 data-translationkey="accommodation.title"></h2>
         <p data-translationkey="accommodation.description"></p>
-        <a data-translationkey="accommodation.bb_list"></a>
+        <a data-translationkey="accommodation.bb_list" target="_blank" href="https://drive.google.com/file/d/1dYpuNlnIKtFj8OQja8ox5dCzryqK14nq/view?usp=sharing"></a>
         <p data-translationkey="accommodation.hotel_transport"></p>
         <p>Ennistymon, Lisdoonvarna, Liscannor, Lahinch</p>
       </section>
