--- a/index.html
+++ b/index.html
@@ -48,22 +48,24 @@
           <div class="agenda-day">
             <h3 data-translationkey="agenda.day1">21. October</h3>
             <dl>
-              <dt>tbd</dt>
+              <dt>11:30</dt>
               <dd data-translationkey="agenda.pickup"></dd>
-              <dt>15:00</dt>
+              <dt>14:00</dt>
               <dd data-translationkey="agenda.ceremony"></dd>
-              <dt>15:30</dt>
+              <dt>15:00</dt>
               <dd data-translationkey="agenda.reception"></dd>
-              <dt>17:00</dt>
+              <dt>17:30</dt>
               <dd data-translationkey="agenda.dinner"></dd>
-              <dt>20:00</dt>
+              <dt>2100/2130</dt>
               <dd data-translationkey="agenda.dance"></dd>
+              <dt>01:30</dt>
+              <dd data-translationkey="agenda.musicEnd"></dd>
             </dl>
           </div>
           <div class="agenda-day">
             <h3 data-translationkey="agenda.day2"></h3>
             <dl>
-              <dt>tbd</dt>
+              <dt>11:30</dt>
               <dd data-translationkey="agenda.bring"></dd>
               <dt>17:00</dt>
               <dd>Keogh's Pub in Galway</dd>
